# rust-embedded-experiments

./: shell.nix
f4-discovery-showcase/: Cargo.toml  Embed.toml  rust-toolchain.toml
f4-discovery-showcase/.cargo/: config.toml
f4-discovery-showcase/src/: lis3dsh.rs  main.rs
