[package]
edition = "2021"
name = "f4-discovery-showcase"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }

defmt = "0.3.6"
defmt-rtt = "0.4.0"

embassy-stm32 = { version = "0.1.0", features = ["stm32f407vg", "memory-x", "defmt", "time-driver-any", "exti"] }
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "integrated-timers", "defmt"] }
embassy-time = { version = "0.3.0", features = ["tick-hz-32_768", "defmt", "defmt-timestamp-uptime"] }

embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }

embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }

static_cell = "2.0.0"
micromath = { version = "2.1.0", features = ["vector"] }

[[bin]]
name = "f4-discovery-showcase"
test = false
bench = false
